
syntax = "proto3";

option go_package = "google.golang.org/grpc/sigma_grpc";
option java_multiple_files = true;
option java_package = "io.grpc.sigma";
option java_outer_classname = "SigmaProto";

package sigma;

// service

service HumanService {
  rpc signup (HumanSignupDto) returns (HumanSignupOutput) {}
  rpc verify (HumanVerifyDto) returns (HumanVerifyOutput) {}
  rpc complete (HumanCompleteDto) returns (HumanCompleteOutput) {}
  rpc update (HumanUpdateDto) returns (HumanUpdateOutput) {}
  rpc get (HumanGetDto) returns (HumanGetOutput) {}
}

// models

message Human {
	int64 id = 1;
  	string email = 2;
	string firstName = 3;
	string lastName = 4;
}

message Pending {
	int64 id = 1;
	string email = 2;
	string verifyCode = 3;
	string clientCode = 4;
	string state = 5;     
}

message Session {
	int64 id = 1;
	int64 userId = 2;
	int32 creatureType = 3;
	string token = 4;
}

// messages

message HumanSignupDto {
	string email = 1;
}

message HumanSignupOutput {
	Pending pending = 1;
}

message HumanVerifyDto {
	string verifyCode = 1;
	string clientCode = 2;
}
  
message HumanVerifyOutput {
	Pending pending = 1;
	Human human = 2;
	Session session = 3;
}

message HumanCompleteDto {
	string verifyCode = 1;
	string clientCode = 2;
	string firstName = 3;
	string lastName = 4;
}
  
message HumanCompleteOutput {
	Human human = 2;
	Session session = 3;
}

message HumanUpdateDto {
	string firstName = 1;
	string lastName = 2;
}
  
message HumanUpdateOutput {
	Human human = 1;
}

message HumanGetDto {
	string userId = 1;
}

message HumanGetOutput {
	Human human = 1;
}

// service

service TowerService {
	rpc create (TowerCreateDto) returns (TowerCreateOutput) {}
	rpc update (TowerUpdateDto) returns (TowerUpdateOutput) {}
	rpc delete (TowerDeleteDto) returns (TowerDeleteOutput) {}
	rpc get (TowerGetDto) returns (TowerGetOutput) {}
	rpc join (TowerJoinDto) returns (TowerJoinOutput) {}
}
  
// models

message Tower {
	int64 id = 1;
  	string name = 2;
	int64 avatarId = 3;
	bool isPublic = 4;
	int64 creatorId = 5;
}

message Member {
	int64 id = 1;
	int64 humanId = 2;
	int64 towerId = 3;
}

// messages

message TowerCreateDto {
	string name = 1;
	int64 avatarId = 2;
	bool isPublic = 3;
}

message TowerCreateOutput {
	Tower tower = 1;
	Member member = 2;
}

message TowerUpdateDto {
	int64 towerId = 1;
	string name = 2;
	int64 avatarId = 3;
	bool isPublic = 4;
}

message TowerUpdateOutput {
	Tower tower = 1;
}

message TowerDeleteDto {
	int64 towerId = 1;
}

message TowerDeleteOutput {}

message TowerGetDto {
	string towerId = 1;
}

message TowerGetOutput {
	Tower tower = 1;
}

message TowerJoinDto {
	string towerId = 1;
}

message TowerJoinOutput {
	Member member = 1;
}
