// Original file: grpc/packets.proto


export interface HumanCompleteDto {
  'verifyCode'?: (string);
  'clientCode'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
}

export interface HumanCompleteDto__Output {
  'verifyCode': (string);
  'clientCode': (string);
  'firstName': (string);
  'lastName': (string);
}
